--- a/Web/Hopper.Web/Views/Home/Index.cshtml
+++ b/Web/Hopper.Web/Views/Home/Index.cshtml
@@ -6,9 +6,9 @@
 }
 
 <div class="text-center">
-    <ul>
-        <li class="list-group-item">All:@Model.AllPractices</li>
-        <li class="list-group-item">FootballPractices:@Model.FootballPractices</li>
-        <li class="list-group-item">BasketBallPractices:@Model.BasketballPractices</li>
+    <ul class="list-group list-group-flush">
+        <li class="list-group-item">All Practices:@Model.AllPractices</li>
+        <li class="list-group-item">Football Practices:@Model.FootballPractices</li>
+        <li class="list-group-item">Basketball Practices:@Model.BasketballPractices</li>
     </ul>
 </div>
