Names for all practices changhed

--- a/Web/Hopper.Web/Views/Home/Index.cshtml
+++ b/Web/Hopper.Web/Views/Home/Index.cshtml
@@ -5,6 +5,9 @@
     this.ViewData["Title"] = "Home Page";
 }
 
+<h1 class="text-center">Welcome to Hopper!</h1>
+
+<h2 class="text-center">Find your practice </h2>
 <div class="text-center">
     <ul class="list-group list-group-flush">
         <li class="list-group-item">All Practices:@Model.AllPractices</li>
