--- a/Web/Hopper.Web/Views/Create/Create.cshtml
+++ b/Web/Hopper.Web/Views/Create/Create.cshtml
@@ -6,9 +6,9 @@
 }
 <form method="post">
     <div class="form-group mb-3">
-        <label asp-for="AllSports"></label>
-        <select class="form-control" asp-items="sports"></select>
-        <span asp-validation-for="AllSports"></span>
+        <label asp-for="AllSportsId"></label>
+        <select class="form-control" asp-for="AllSportsId" asp-items="sports"></select>
+        <span asp-validation-for="AllSportsId"></span>
     </div>
     <div class="form-group  mb-3">
         <span asp-validation-for="Location" class="form-control-text">Location</span>
