Adding AutoMapper for PracticeViewModel, Paging for all Practices and added practices for drop down on create

--- a/Web/Hopper.Web/Views/All/AllPractice.cshtml
+++ b/Web/Hopper.Web/Views/All/AllPractice.cshtml
@@ -11,6 +11,7 @@
     {
         <div class="media ">
             <div class="media-body">
+                <h5 class="mt-0">@practice.Description</h5>
                 <h5 class="mt-0">@practice.SportName</h5>
                 <p> @practice.Date.Date.ToString("yyyy-MM-dd") @practice.Date.DayOfWeek</p>
                 <p> @practice.Time.TimeOfDay</p>
@@ -21,12 +22,34 @@
     }
 </div>
 
-<nav class="mx-auto" style="width: 200px" aria-label="Page navigation example">
-    <ul class="pagination">
-        <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-        <li class="page-item"><a class="page-link" href="#">1</a></li>
-        <li class="page-item"><a class="page-link" href="#">2</a></li>
-        <li class="page-item"><a class="page-link" href="#">3</a></li>
-        <li class="page-item"><a class="page-link" href="#">Next</a></li>
+
+<nav aria-label="Page navigation example">
+    <ul class="pagination justify-content-center">
+        <li class="page-item @if(!Model.HasPrevPage) {<text>disabled</text>}">
+            <a class="page-link" asp-action="AllPractice" asp-route-id="@Model.PreviousPageNumber">Previous</a>
+        </li>
+        @for (int i = Model.PageNumber - 3; i < Model.PageNumber; i++)
+        {
+            if (i>0)
+            {
+                <li class="page-item"><a class="page-link" asp-action="AllPractice" asp-route-id="@i">@i</a></li>
+            }
+        }
+        <li class="page-item active" aria-current="page">
+            <span class="page-link">
+                @Model.PageNumber
+                <span class="sr-only"></span>
+            </span>
+        </li>
+        @for (int i = Model.PageNumber + 1; i < Model.PageNumber + 3; i++)
+        {
+            if (i <= Model.PagesCount)
+            {
+                <li class="page-item"><a class="page-link" asp-action="AllPractice" asp-route-id="@i">@i</a></li>
+            }
+        }        
+        <li class="page-item @if(!Model.HasNextPage) {<text>disabled</text>}">
+            <a class="page-link" asp-action="AllPractice" asp-route-id="@Model.NextPageNumber">Next</a>
+        </li>
     </ul>
 </nav>
