--- a/Web/Hopper.Web/Views/Create/Create.cshtml
+++ b/Web/Hopper.Web/Views/Create/Create.cshtml
@@ -6,7 +6,7 @@
 }
 <form method="post">
     <div class="form-group mb-3">
-        <label asp-for="AllSportsId"></label>
+        <label asp-for="AllSports"></label>
         <select class="form-control" asp-for="AllSportsId" asp-items="sports"></select>
         <span asp-validation-for="AllSportsId"></span>
     </div>
