--- a/Web/Hopper.Web/Views/Create/Create.cshtml
+++ b/Web/Hopper.Web/Views/Create/Create.cshtml
@@ -11,6 +11,10 @@
         <span asp-validation-for="AllSportsId"></span>
     </div>
     <div class="form-group  mb-3">
+        <span asp-validation-for="Title" class="form-control-text">Title</span>
+        <input asp-for="Title" type="text" class="form-control">
+    </div>
+    <div class="form-group  mb-3">
         <span asp-validation-for="Location" class="form-control-text">Location</span>
         <input asp-for="Location" type="text" class="form-control">
     </div>
