--- a/Web/Hopper.Web/Views/Shared/_Layout.cshtml
+++ b/Web/Hopper.Web/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="All" asp-action="AllPractice">AllPractices</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="All" asp-action="AllPractice">Workouts</a>
                         </li>
                         @if (this.User.Identity.IsAuthenticated)
                         {
